--- a/FrontEnd/css/navigation.html
+++ b/FrontEnd/css/navigation.html
@@ -24,13 +24,12 @@ body {
 }
 
 header {
-  background-color: #a3d65c;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px;
-  font-size: 24px;
-}
+    grid-area: header;
+    background-color: #a3d65c;
+    color: white;
+    padding: 1rem;
+    text-align: center;
+  }
 
 aside {
   grid-area: aside;
