--- a/FrontEnd/css/contractsform.html
+++ b/FrontEnd/css/contractsform.html
@@ -106,49 +106,29 @@ th {
   background-color: #f4f4f4;
 }
 
+.totals {
+  margin-top: 1rem;
+  display: flex;
+  justify-content: space-between;
+}
+
 .totals .form-group {
   flex: 1;
   margin-right: 1rem;
 }
 
-.action-button {
-  background-color: #4caf50;
+button[type="submit"] {
+  padding: 0.5rem 1rem;
+  background-color: #a3d65c;
   color: white;
-  padding: 0; /* Remove padding */
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  text-decoration: none;
-  margin-bottom: 10px;
-  display: flex; /* Use flexbox for centering */
-  justify-content: center; /* Center horizontally */
-  align-items: center; /* Center vertically */
-  font-size: 16px;
-  font-weight: bold;
-  width: 200px; /* Set a fixed width */
-  height: 50px; /* Set a fixed height */
-  transition: background-color 0.3s ease, transform 0.3s ease;
+  font-size: 1rem;
 }
 
-.action-button a {
-  color: white;
-  text-decoration: none;
-  width: 100%;
-  height: 100%;
-  display: flex; /* Use flexbox for centering */
-  justify-content: center; /* Center horizontally */
-  align-items: center; /* Center vertically */
+button[type="submit"]:hover {
+  background-color: #8bb43f;
 }
-
-.action-button:hover {
-  background-color: #45a049;
-  transform: translateY(-2px);
-}
-
-.action-button:active {
-  background-color: #388e3c;
-  transform: translateY(0);
-}
-
 
 </style>
